<resources>
    <string name="app_name">Assignment_11</string>
    <string name="website">Website:</string>
    <string name="course_fee">Course fee:</string>
    <string name="no_of_class">No of class:</string>
    <string name="course_duration">Course Duration:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="login_registration">Login/Registration</string>
    <string name="api_key">VGhpcyBpcyBBUEkgS0VZIGluIGJhc2U2NCBmb3JtYXQ=</string>
    <string name="biography">Biography:</string>
</resources>